--- a/week03/src/main/resources/static/index.html
+++ b/week03/src/main/resources/static/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Timeline Service</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Timeline Service</title>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
 
-  <style>
+    <style>
         @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 
         body {
@@ -204,8 +204,11 @@
         #cards-box {
             margin-top: 12px;
         }
+
+
+
     </style>
-  <script>
+    <script>
         // 사용자가 내용을 올바르게 입력하였는지 확인
         function isValidContents(contents) {
             if (contents == '') {
@@ -265,90 +268,164 @@
 
         // 메모를 불러와서 보여줍니다.
         function getMessages() {
-            // 1. 기존 메모 내용을 지웁니다.
-            // 2. 메모 목록을 불러와서 HTML로 붙입니다.
+            $('#cards-box').empty();
+
+            $.ajax({
+                type: 'GET',
+                url: '/api/memos',
+                success: function (response) {
+                    for (let i = 0; i < response.length; i++) {
+                        let memo = response[i];
+                        let id = memo.id;
+                        let username = memo.username;
+                        let contents = memo.contents;
+                        let modifiedAt = memo.modifiedAt;
+
+                        addHTML(id, username, contents, modifiedAt);
+                    }
+                }
+            })
         }
 
         // 메모 하나를 HTML로 만들어서 body 태그 내 원하는 곳에 붙입니다.
         function addHTML(id, username, contents, modifiedAt) {
             // 1. HTML 태그를 만듭니다.
+            let tempHtml = `<div class="card">
+                <!-- date/username 영역 -->
+                <div class="metadata">
+                    <div class="date">
+                        ${modifiedAt}
+                    </div>
+                    <div id="${id}-username" class="username">
+                        ${username}
+                    </div>
+                </div>
+                <!-- contents 조회/수정 영역-->
+                <div class="contents">
+                    <div id="${id}-contents" class="text">
+                        ${contents}
+                    </div>
+                    <div id="${id}-editarea" class="edit">
+                        <textarea id="${id}-textarea" class="te-edit" name="" id="" cols="30" rows="5"></textarea>
+                    </div>
+                </div>
+                <!-- 버튼 영역-->
+                <div class="footer">
+                    <img id="${id}-edit" class="icon-start-edit" src="images/edit.png" alt="" onclick="editPost('${id}')">
+                    <img id="${id}-delete" class="icon-delete" src="images/delete.png" alt="" onclick="deleteOne('${id}')">
+                    <img id="${id}-submit" class="icon-end-edit" src="images/done.png" alt="" onclick="submitEdit('${id}')">
+                </div>
+            </div>`;
             // 2. #cards-box 에 HTML을 붙인다.
+            $('#cards-box').append(tempHtml);
         }
 
         // 메모를 생성합니다.
         function writePost() {
-            // 1. 작성한 메모를 불러옵니다.
-            // 2. 작성한 메모가 올바른지 isValidContents 함수를 통해 확인합니다.
-            // 3. genRandomName 함수를 통해 익명의 username을 만듭니다.
-            // 4. 전달할 data JSON으로 만듭니다.
-            // 5. POST /api/memos 에 data를 전달합니다.
+            let contents = $('#contents').val();
+            if (isValidContents(contents) == false) {
+                return;
+            }
+            let username = genRandomName(10);
+            let data = {'username': username, 'contents': contents};
+
+            $.ajax({
+                type: "POST",
+                url: "/api/memos",
+                contentType: "application/json",
+                data: JSON.stringify(data),
+                success: function (response) {
+                    alert('메시지가 성공적으로 작성되었습니다.');
+                    window.location.reload();
+                }
+            });
         }
 
         // 메모를 수정합니다.
         function submitEdit(id) {
-            // 1. 작성 대상 메모의 username과 contents 를 확인합니다.
-            // 2. 작성한 메모가 올바른지 isValidContents 함수를 통해 확인합니다.
-            // 3. 전달할 data JSON으로 만듭니다.
-            // 4. PUT /api/memos/{id} 에 data를 전달합니다.
+            let username = $(`#${id}-username`).text().trim();
+            let contents = $(`#${id}-textarea`).val().trim();
+            if (isValidContents(contents) == false) {
+                return;
+            }
+            let data = {'username': username, 'contents': contents};
+
+            $.ajax({
+                type: "PUT",
+                url: `/api/memos/${id}`,
+                contentType: "application/json",
+                data: JSON.stringify(data),
+                success: function (response) {
+                    alert('메시지 변경에 성공하였습니다.');
+                    window.location.reload();
+                }
+            });
         }
 
         // 메모를 삭제합니다.
         function deleteOne(id) {
-            // 1. DELETE /api/memos/{id} 에 요청해서 메모를 삭제합니다.
+            $.ajax({
+                type: "DELETE",
+                url: `/api/memos/${id}`,
+                success: function (response) {
+                    alert('메시지 삭제에 성공하였습니다.');
+                    window.location.reload();
+                }
+            })
         }
     </script>
 </head>
 
 <body>
-  <div class="background-header">
+    <div class="background-header">
 
-  </div>
-  <div class="background-body">
+    </div>
+    <div class="background-body">
 
-  </div>
-  <div class="wrap">
-    <div class="header">
-      <h2>Timeline Service</h2>
-      <p>
-        공유하고 싶은 소식을 입력해주세요.
-        24시간이 지난 뒤에는 사라집니다.
-      </p>
     </div>
-    <div class="area-write">
-          <textarea class="field" placeholder="공유하고 싶은 소식을 입력해주세요" name="contents" id="contents" cols="30"
-                    rows="10"></textarea>
-      <!--            <button class="btn btn-danger" onclick="writePost()">작성하기</button>-->
-      <img src="images/send.png" alt="" onclick="writePost()">
+    <div class="wrap">
+        <div class="header">
+            <h2>Timeline Service</h2>
+            <p>
+                공유하고 싶은 소식을 입력해주세요.
+                24시간이 지난 뒤에는 사라집니다.
+            </p>
+        </div>
+        <div class="area-write">
+                  <textarea class="field" placeholder="공유하고 싶은 소식을 입력해주세요" name="contents" id="contents" cols="30"
+                            rows="10"></textarea>
+            <!--            <button class="btn btn-danger" onclick="writePost()">작성하기</button>-->
+            <img src="images/send.png" alt="" onclick="writePost()">
+        </div>
+        <div id="cards-box" class="area-read">
+            <div class="card">
+                <!-- date/username 영역 -->
+                <div class="metadata">
+                    <div class="date">
+                        October 10, 2020
+                    </div>
+                    <div id="1-username" class="username">
+                        anonymous
+                    </div>
+                </div>
+                <!-- contents 조회/수정 영역-->
+                <div class="contents">
+                    <div id="1-contents" class="text">
+                        dsafnkalfklewakflekelafkleajfkleafkldsankflenwaklfnekwlafneklwanfkelawnfkelanfkleanfklew
+                    </div>
+                    <div id="1-editarea" class="edit">
+                        <textarea id="1-textarea" class="te-edit" cols="30" rows="5"></textarea>
+                    </div>
+                </div>
+                <!-- 버튼 영역-->
+                <div class="footer">
+                    <img id="1-edit" onclick="editPost('1')" class="icon-start-edit" src="images/edit.png" alt="">
+                    <img id="1-delete" onclick="deleteOne('1')" class="icon-delete" src="images/delete.png" alt="">
+                    <img id="1-submit" onclick="submitEdit('1')" class="icon-end-edit" src="images/done.png" alt="">
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="cards-box" class="area-read">
-      <div class="card">
-        <!-- date/username 영역 -->
-        <div class="metadata">
-          <div class="date">
-            October 10, 2020
-          </div>
-          <div id="1-username" class="username">
-            anonymous
-          </div>
-        </div>
-        <!-- contents 조회/수정 영역-->
-        <div class="contents">
-          <div id="1-contents" class="text">
-            dsafnkalfklewakflekelafkleajfkleafkldsankflenwaklfnekwlafneklwanfkelawnfkelanfkleanfklew
-          </div>
-          <div id="1-editarea" class="edit">
-            <textarea id="1-textarea" class="te-edit" name="" id="" cols="30" rows="5"></textarea>
-          </div>
-        </div>
-        <!-- 버튼 영역-->
-        <div class="footer">
-          <img id="1-edit" onclick="editPost('1')" class="icon-start-edit" src="images/edit.png" alt="">
-          <img id="1-delete" onclick="deleteOne('1')" class="icon-delete" src="images/delete.png" alt="">
-          <img id="1-submit" onclick="submitEdit('1')" class="icon-end-edit" src="images/done.png" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
 </body>
 
 </html>
